[package]
name = "bridge-wrangler"
version = "0.9.55"
edition = "2021"
description = "CLI tool for operations on bridge PBN files"
license = "Unlicense"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
bridge-parsers = { git = "https://github.com/bridge-craftwork/Bridge-Parsers" }
bridge-solver = { git = "https://github.com/bridge-craftwork/bridge-solver" }
pbn-to-pdf = { git = "https://github.com/bridge-craftwork/pbn-to-pdf" }
anyhow = "1.0"
thiserror = "2.0"
regex = "1.11"
